--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -216,7 +216,7 @@ body::-webkit-scrollbar {
 	background: linear-gradient(to left, #2F80ED, #56CCF2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ *
 	*/
   background-color: #40BDF2;
-  margin-top: -17px;
+  margin-top: -3.7rem;
 	border: 0;
   /*background-image: url(../images/blue-tri.svg);
   background-position: center;  Center the image 
